[package]
name = "dino"
version = "0.1.0"
authors = ["Anhad Singh <andypythonappdeveloper@gmail.com>"]
license = "MIT or Apache-2.0"
keywords = ["json", "database"]
categories = ["database"]
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2018"

[dependencies]
serde_json = "1.0"