[package]
name = "dino"
version = "0.1.1"
authors = ["Anhad Singh <andypythonappdeveloper@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["json", "database"]
categories = ["database"]
readme = "README.md"
edition = "2018"
description = "Dino is a lightweight database for rust!"
repository = "https://github.com/Andy-Python-Programmer/dino"
homepage = "https://github.com/Andy-Python-Programmer/dino"

[dependencies]
serde_json = "1.0"